# 202632-fa

./: .gitignore  _quarto.yml  cronograma.qmd  index.qmd  pyproject.toml
.github/workflows/: publish.yml
assets/: insper-custom.css  insper-theme.scss
aulas/: aula01-fundamentos.qmd  aula02-arima.qmd  aula03-previsao.qmd  aula03-sarima.qmd  aula04-previsao.qmd  aula04-volatilidade.qmd  aula05-var.qmd  aula05-volatilidade.qmd  aula06-portfolios.qmd  aula06-var.qmd  aula07-avancados.qmd  aula07-portfolios.qmd  aula08-avancados.qmd
complementar/: aula01-fundamentos-notebook.ipynb  aula02-arima-prophet-notebook.ipynb  aula03-darts-forecasting.ipynb  aula04-volatilidade-arch-python.ipynb  aula04-volatilidade-garch-r.qmd  aula04-volatilidade-statsforecast.ipynb  aula05-capm-var-yfinance.ipynb  aula06-otimizacao-markowitz.ipynb  aula07-var-cointegracao-pairtrading.ipynb  aula07-var-multivariado-r.qmd  dinamica-sazonalidade-pib.ipynb  index.qmd  lab02-ml-series-notebook.ipynb  lab02-ml-series-notebook.qmd
dados/: distribr_adquirida.csv  distribr_serie.csv
dinamicas/: recap-aulas-01-02.html  template-exercicio-sarima.qmd
labs/: app-carteira.qmd  app-perfil-risco.qmd  dinamica-escolha-ativos.qmd  lab01-exploracao.qmd  lab02-pipeline.qmd  lab03-financeiras-alternativo.qmd  lab03-financeiras-r.qmd  lab03-financeiras.qmd  lab04-portfolios.qmd  lab04-projeto.qmd  lab05-projeto.qmd
labs/app-carteira/: README.md  (+3 more)
slides/: aula01-slides.qmd  aula02-slides.qmd  aula04-slides.qmd  aula05-slides.qmd  aula06-slides.qmd  aula07-slides.qmd
trabalhos/: final.qmd  intermediario.qmd
(+41 files in other folders)
