[project]
name = "fa-insper-2026"
version = "0.1.0"
description = "Financial Analytics — PADS Insper 2026.2"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "statsforecast>=1.6",
    "arch>=6.0",
    "yfinance>=0.2.28",
    "scikit-learn>=1.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[dependency-groups]
dev = [
    "pypdf>=6.10.0",
]
